crates/sniff-test/tests/snapshots/fixtures__driver_direct_panic.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "direct_panic",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": null,
      "metadata": "[METADATA]",
      "package-name": null,
      "package-version": null,
      "target": null
    },
    "concrete-roots": 1,
    "counts": {
      "panic-obligations": 0,
      "raw-panic-paths": 1,
      "trusted-panic-obligations": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "hits": 0,
      "total": 0
    },
    "format-version": 1,
    "generic-roots": 0,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "panic-obligations": 0,
          "raw-panic-paths": 1,
          "trusted-panic-obligations": 0
        },
        "findings": [
          {
            "edge": "direct_panic --macro-expansion-> macro std::panic",
            "kind": "panic-invocation",
            "level": "deny",
            "reason": "panic sink core::std::rt::panic_fmt",
            "span": "[FIXTURE]/src/lib.rs:2:5: 2:29",
            "target": "core::std::rt::panic_fmt",
            "trace": [
              "[FIXTURE]/src/lib.rs:2:5: 2:29: direct_panic --macro-expansion-> macro std::panic",
              "[FIXTURE]/src/lib.rs:2:5: 2:29: macro std::panic --macro-expansion-> macro core::std::panic::panic_2021",
              "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "direct_panic",
        "root-declaration": "[FIXTURE]/src/lib.rs:1:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
