crates/sniff-test/tests/snapshots/fixtures__driver_documented_obligation.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "analysis-findings": [],
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "documented_obligation",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": null,
      "metadata": "[METADATA]",
      "package-name": null,
      "package-version": null,
      "target": null
    },
    "concrete-roots": 2,
    "counts": {
      "analysis-incomplete": 0,
      "cached-dependency-panics": 0,
      "compiler-asserts": 0,
      "documented-panics": 1,
      "indirect-call-boundaries": 0,
      "panic-invocations": 1,
      "trusted-panics": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 2,
    "generic-roots": 0,
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 0,
          "documented-panics": 1,
          "indirect-call-boundaries": 0,
          "panic-invocations": 0,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "documented_obligation::reaches_documented_contract --direct-call-> documented_obligation::documented_contract",
            "kind": "documented-panic",
            "level": "warn",
            "reason": "documented_obligation::documented_contract documents when it may panic under # Panics",
            "span": "[FIXTURE]/src/lib.rs:8:5: 8:30",
            "target": "documented_obligation::documented_contract",
            "trace": [
              "[FIXTURE]/src/lib.rs:8:5: 8:30: documented_obligation::reaches_documented_contract --direct-call-> documented_obligation::documented_contract"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "documented_obligation::reaches_documented_contract",
        "root-declaration": "[FIXTURE]/src/lib.rs:7:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 0,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "panic-invocations": 1,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": "documented_obligation::undocumented_bug --macro-expansion-> macro std::panic",
            "kind": "panic-invocation",
            "level": "deny",
            "reason": "panic sink core::std::rt::panic_fmt",
            "span": "[FIXTURE]/src/lib.rs:12:5: 12:29",
            "target": "core::std::rt::panic_fmt",
            "trace": [
              "[FIXTURE]/src/lib.rs:12:5: 12:29: documented_obligation::undocumented_bug --macro-expansion-> macro std::panic",
              "[FIXTURE]/src/lib.rs:12:5: 12:29: macro std::panic --macro-expansion-> macro core::std::panic::panic_2021",
              "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "documented_obligation::undocumented_bug",
        "root-declaration": "[FIXTURE]/src/lib.rs:11:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
