crates/sniff-test/tests/snapshots/fixtures__driver_documented_obligation_allowed.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "documented_obligation",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": null,
      "metadata": "[METADATA]",
      "package-name": null,
      "package-version": null,
      "target": null
    },
    "dependencies": [],
    "findings": [],
    "format-version": 4,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
