crates/sniff-test/tests/snapshots/fixtures__driver_generic_roots.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "generic_roots"
    },
    "dependencies": [],
    "findings": [
      {
        "effect": "panic",
        "kind": "compiler-assert",
        "level": "deny",
        "reason": "compiler assert",
        "root": "generic_roots::generic_index",
        "root-kind": "generic",
        "span": "[FIXTURE]/src/lib.rs:2:6: 2:19",
        "target": "compiler assert index out of bounds: index `index` (_2, argument 2) may exceed length `_3` (temporary)",
        "trace": [
          "[FIXTURE]/src/lib.rs:2:6: 2:19: generic_roots::generic_index --assert-> compiler assert index out of bounds: index `index` (_2, argument 2) may exceed length `_3` (temporary)"
        ]
      },
      {
        "effect": "panic",
        "kind": "documented-panic",
        "level": "warn",
        "reason": "core::slice::<impl [T]>::split_at documents when it may panic under # Panics",
        "root": "generic_roots::generic_split_at",
        "root-kind": "generic",
        "span": "[FIXTURE]/src/lib.rs:6:5: 6:27",
        "target": "core::slice::<impl [T]>::split_at",
        "trace": [
          "[FIXTURE]/src/lib.rs:6:5: 6:27: generic_roots::generic_split_at --direct-call-> core::slice::<impl [T]>::split_at"
        ]
      }
    ],
    "format-version": 8,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
