crates/sniff-test/tests/snapshots/fixtures__driver_indirect_calls.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "indirect_calls",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": null,
      "metadata": "[METADATA]",
      "package-name": null,
      "package-version": null,
      "target": null
    },
    "dependencies": [],
    "findings": [
      {
        "kind": "documented-panic",
        "level": "warn",
        "reason": "indirect_calls::Risky::documented documents when it may panic under # Panics",
        "root": "indirect_calls::call_documented",
        "root-kind": "generic",
        "span": "[FIXTURE]/src/lib.rs:11:5: 11:27",
        "target": "indirect_calls::Risky::documented",
        "trace": [
          "[FIXTURE]/src/lib.rs:11:5: 11:27: indirect_calls::call_documented --indirect-call-> indirect call FnDef(DefId(0:4 ~ indirect_calls[3e22]::Risky::documented), [T/#0])"
        ]
      },
      {
        "kind": "indirect-call-boundary",
        "level": "warn",
        "reason": "indirect call through an opaque callable cannot be verified",
        "root": "indirect_calls::call_pointer",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:19:5: 19:17",
        "trace": [
          "[FIXTURE]/src/lib.rs:19:5: 19:17: indirect_calls::call_pointer --indirect-call-> indirect call Binder { value: fn(bool), bound_vars: [] }"
        ]
      },
      {
        "kind": "indirect-call-boundary",
        "level": "warn",
        "reason": "indirect call to undocumented trait method indirect_calls::Risky::undocumented cannot be verified",
        "root": "indirect_calls::call_undocumented",
        "root-kind": "generic",
        "span": "[FIXTURE]/src/lib.rs:15:5: 15:29",
        "target": "indirect_calls::Risky::undocumented",
        "trace": [
          "[FIXTURE]/src/lib.rs:15:5: 15:29: indirect_calls::call_undocumented --indirect-call-> indirect call FnDef(DefId(0:5 ~ indirect_calls[3e22]::Risky::undocumented), [T/#0])"
        ]
      }
    ],
    "format-version": 4,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
