crates/sniff-test/tests/snapshots/fixtures__driver_macro_expansion_source_callsite.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "macro_expansion",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": null,
      "metadata": "[METADATA]",
      "package-name": null,
      "package-version": null,
      "target": null
    },
    "concrete-roots": 4,
    "counts": {
      "analysis-incomplete": 0,
      "indirect-call-boundaries": 0,
      "panic-obligations": 0,
      "raw-panic-paths": 4,
      "trusted-panic-obligations": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 1,
    "generic-roots": 0,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "analysis-incomplete": 0,
          "indirect-call-boundaries": 0,
          "panic-obligations": 0,
          "raw-panic-paths": 1,
          "trusted-panic-obligations": 0
        },
        "findings": [
          {
            "edge": "macro_expansion::direct_assert --macro-expansion-> macro core::std::assert",
            "kind": "panic-invocation",
            "level": "deny",
            "reason": "panic sink core::panicking::panic",
            "span": "[FIXTURE]/src/lib.rs:27:5: 27:18",
            "target": "core::panicking::panic",
            "trace": [
              "[FIXTURE]/src/lib.rs:27:5: 27:18: macro_expansion::direct_assert --macro-expansion-> macro core::std::assert",
              "[FIXTURE]/src/lib.rs:27:5: 27:18: macro core::std::assert --direct-call-> core::panicking::panic"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "macro_expansion::direct_assert",
        "root-declaration": "[FIXTURE]/src/lib.rs:26:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "indirect-call-boundaries": 0,
          "panic-obligations": 0,
          "raw-panic-paths": 1,
          "trusted-panic-obligations": 0
        },
        "findings": [
          {
            "edge": "macro_expansion::direct_macro --macro-expansion-> macro macro_expansion::const_assert",
            "kind": "panic-invocation",
            "level": "deny",
            "reason": "panic sink core::panicking::panic",
            "span": "[FIXTURE]/src/lib.rs:23:5: 23:24",
            "target": "core::panicking::panic",
            "trace": [
              "[FIXTURE]/src/lib.rs:23:5: 23:24: macro_expansion::direct_macro --macro-expansion-> macro macro_expansion::const_assert",
              "[FIXTURE]/src/lib.rs:3:9: 3:28: macro macro_expansion::const_assert --macro-expansion-> macro core::std::assert",
              "[FIXTURE]/src/lib.rs:3:9: 3:28: macro core::std::assert --direct-call-> core::panicking::panic"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "macro_expansion::direct_macro",
        "root-declaration": "[FIXTURE]/src/lib.rs:22:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "indirect-call-boundaries": 0,
          "panic-obligations": 0,
          "raw-panic-paths": 1,
          "trusted-panic-obligations": 0
        },
        "findings": [
          {
            "edge": "macro_expansion::macro_internal_marker --macro-expansion-> macro macro_expansion::justified_const_assert",
            "kind": "panic-invocation",
            "level": "deny",
            "reason": "panic sink core::panicking::panic",
            "span": "[FIXTURE]/src/lib.rs:38:5: 38:34",
            "target": "core::panicking::panic",
            "trace": [
              "[FIXTURE]/src/lib.rs:38:5: 38:34: macro_expansion::macro_internal_marker --macro-expansion-> macro macro_expansion::justified_const_assert",
              "[FIXTURE]/src/lib.rs:33:9: 33:28: macro macro_expansion::justified_const_assert --macro-expansion-> macro core::std::assert",
              "[FIXTURE]/src/lib.rs:33:9: 33:28: macro core::std::assert --direct-call-> core::panicking::panic"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "macro_expansion::macro_internal_marker",
        "root-declaration": "[FIXTURE]/src/lib.rs:37:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "analysis-incomplete": 0,
          "indirect-call-boundaries": 0,
          "panic-obligations": 0,
          "raw-panic-paths": 1,
          "trusted-panic-obligations": 0
        },
        "findings": [
          {
            "edge": "macro_expansion::macro_wrapped --macro-expansion-> macro macro_expansion::static_assert",
            "kind": "panic-invocation",
            "level": "deny",
            "reason": "panic sink core::panicking::panic",
            "span": "[FIXTURE]/src/lib.rs:14:5: 14:25",
            "target": "core::panicking::panic",
            "trace": [
              "[FIXTURE]/src/lib.rs:14:5: 14:25: macro_expansion::macro_wrapped --macro-expansion-> macro macro_expansion::static_assert",
              "[FIXTURE]/src/lib.rs:9:9: 9:34: macro macro_expansion::static_assert --macro-expansion-> macro macro_expansion::const_assert",
              "[FIXTURE]/src/lib.rs:3:9: 3:28: macro macro_expansion::const_assert --macro-expansion-> macro core::std::assert",
              "[FIXTURE]/src/lib.rs:3:9: 3:28: macro core::std::assert --direct-call-> core::panicking::panic"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "macro_expansion::macro_wrapped",
        "root-declaration": "[FIXTURE]/src/lib.rs:13:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
