crates/sniff-test/tests/snapshots/fixtures__driver_marker_placement.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "marker_placement"
    },
    "dependencies": [],
    "findings": [
      {
        "function": "marker_placement::safety_comment_on_function_def_bad",
        "kind": "unsafe-call-missing-requirements",
        "level": "warn",
        "missing-requirements": [
          "valid_ptr: pointer must be non-null.",
          "initialized: pointer must reference initialized memory."
        ],
        "reason": "unsafe call to `marker_placement::read_byte` does not satisfy all # Safety requirements",
        "root": "marker_placement::safety_comment_on_function_def_bad",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:58:14: 58:28",
        "target": "marker_placement::read_byte"
      },
      {
        "kind": "compiler-assert",
        "level": "deny",
        "reason": "compiler assert",
        "root": "marker_placement::panic_comment_on_function_def_bad",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:27:5: 27:24",
        "target": "compiler assert attempt to divide `total` (_1, argument 1) by zero",
        "trace": [
          "[FIXTURE]/src/lib.rs:27:5: 27:24: marker_placement::panic_comment_on_function_def_bad --assert-> compiler assert attempt to divide `total` (_1, argument 1) by zero"
        ]
      }
    ],
    "format-version": 6,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
